src/test/resources/bad/provided/032-array-of-non-int-size.lat
int main () {
    int [] arr = new int ["abc"];
    return 0;
}
